@@ -27,7 +27,7 @@ automake -a
 
 ./configure --prefix=${DIFX_PREFIX}
 make
-(su root?)
+# (su root?)
 make install
 
 After an svn update, these steps do not need to be rerun.  usually just 
